# 10K_Principle

./: .gitignore  README.md
C#/SQLite/: test.md
C#/WPF/Basic/: ReadMe.md
C#/WPF/Sudokou/: Sudokou.sln
C++/Basic/00_10_Regex/: test.cpp
C++/Basic/00_1_FriendClass/: testFriendClass.cpp
C++/Basic/00_1_Functor/: ReadMe.md  main.cpp
C++/Basic/00_1_Struct/: Test.cpp
C++/Basic/00_1_Union/: test.cpp
C++/Basic/00_3_EnumCStyle/: test.cpp
C++/Basic/00_7_Inherit/: test.cpp
C++/Basic/00_8_Polymorphism/: Test.cpp
C++/Basic/00_9_File/: test.cpp  (+2 more)
C++/Basic/10_CMakeTest/: CMakeLists.txt  main.cpp
C++/Basic/10_CMakeTest/_build/: CMakeCache.txt
C++/Basic/10_CMakeTest/src/: func.cpp
C++/Concept/: 00_BasicConcept_1.md  00_BasicConcept_2.md  00_BasicConcept_3.md
C++/CrossRoadGame/: ReadMe.md
C++/DataStructure/: CirculeBuffer.cpp
C/Interview/: function_pointer.c  interpolation.c  split_string.c
C/Socket/: client.c  server.c
C/String/: main  main.c
HTML/Test1/: index.html  page1.html
Python/PDF_Decrypt/: PDF_Decrypt.py
Python/PDF_Processing/: Rechnung_Processing.py  test.docx
Python/socket/: client_gui.py  socket_test.py
Python/time/: test.py
Rust/async-test/: Cargo.toml
Rust/collection-test/: Cargo.toml
Rust/thread-test/: Cargo.toml
TypeScript/00_HelloWorld/: HowTo.md
TypeScript/01_DataType/: package-lock.json  tsconfig.json
TypeScript/10_Async/: tsconfig.json
TypeScript/30_Serial/: package-lock.json  package.json
TypeScript/31_SSH/: package-lock.json  package.json
TypeScript/Sidebar_Exchange/: code.ts  loginview.ts  package.json
(+111 files in other folders)
